--- a/index.html
+++ b/index.html
@@ -1249,9 +1249,7 @@
             <section class="col-md-3 card-wrapper profile-card-wrapper affix">
                 <div class="card profile-card"><span class="profile-pic-container">
             <div class="profile-pic"><img class="media-object img-circle center-block" data-src="holder.js/100x100"
-                alt="Toan Nguyen"
-                src="https://avatars.githubusercontent.com/u/65282760?v=4"
-                itemprop="image" /></div>
+                alt="Toan Nguyen" src="https://avatars.githubusercontent.com/u/65282760?v=4" itemprop="image" /></div>
             <div class="name-and-profession text-center">
               <h3 itemprop="name"><b>Toan Nguyen</b></h3>
               <h5 class="text-muted" itemprop="jobTitle">Software Development Student</h5>
@@ -1304,11 +1302,11 @@
                                         <li class="card card-nested">
                                             <div class="content">
                                                 <p class="clear-margin relative"><strong>Software Development, ACCP - Aptech Certified Computer
-                          Professional,&nbsp;</strong>FPT APTECH ACADEMY - Alliance with FPT Education</p>
+                            Professional,&nbsp;</strong>FPT APTECH ACADEMY - Alliance with FPT Education</p>
                                                 <p class="text-muted"><small>Sep, 2021 - Sep, 2023</small></p><i></i>
                                                 <div class="space-top labels"><span class="label label-keyword">
-                          <p>Batch: T1.2109.E0</p>
-                        </span></div>
+                            <p>Batch: T1.2109.E0</p>
+                          </span></div>
                                             </div>
                                         </li>
                                     </ul>
@@ -1367,6 +1365,46 @@
                                 </ul>
                             </div>
                         </div>
+
+                        <div class="detail" id="certificates">
+                            <div class="icon"><i class="fs-lg icon-profile"></i><span class="mobile-title">Certificates</span></div>
+                            <div class="info">
+                                <h4 class="title text-uppercase">Certificates</h4>
+                                <div class="content">
+                                    <ul class="list-unstyled clear-margin">
+                                        <li class="card card-nested">
+                                            <div class="content">
+                                                <p class="clear-margin" itemprop="certificate"><strong><a
+                              href="https://freecodecamp.org/certification/maaguaete/responsive-web-design"
+                              target="_blank">Responsive Web Design</a>,&nbsp;</strong>freeCodeCamp</p>
+                                                <p class="text-muted"><small>Issued on: Dec 31, 2021</small></p>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="detail" id="awards">
+                            <div class="icon"><i class="fs-lg icon-trophy"></i><span class="mobile-title">Awards</span></div>
+                            <div class="info">
+                                <h4 class="title text-uppercase">Awards</h4>
+                                <div class="content">
+                                    <ul class="list-unstyled clear-margin">
+                                        <li class="card card-nested">
+                                            <div class="content">
+                                                <p class="clear-margin" itemprop="award"><strong>Certificate of Apreciation
+                          </strong>,&nbsp;FPT-Aptech Academy</p>
+                                                <p class="text-muted"><small>Awarded on: May 25, 2022</small></p>
+                                                <div class="mop-wrapper">
+                                                    <p>Top Excellent Students in the Spring Semester of FPT Academy in HCM</p>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
                         <div class="detail" id="skills">
                             <div class="icon"><i class="fs-lg icon-tools"></i><span class="mobile-title">Skills</span></div>
                             <div class="info">
@@ -1433,44 +1471,6 @@
                             </div>
                         </div>
 
-                        <div class="detail" id="certificates">
-                            <div class="icon"><i class="fs-lg icon-profile"></i><span class="mobile-title">Certificates</span></div>
-                            <div class="info">
-                                <h4 class="title text-uppercase">Certificates</h4>
-                                <div class="content">
-                                    <ul class="list-unstyled clear-margin">
-                                        <li class="card card-nested">
-                                            <div class="content">
-                                                <p class="clear-margin" itemprop="certificate"><strong><a
-                              href="https://freecodecamp.org/certification/maaguaete/responsive-web-design"
-                              target="_blank">Responsive Web Design</a>,&nbsp;</strong>freeCodeCamp</p>
-                                                <p class="text-muted"><small>Issued on: Dec 31, 2021</small></p>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="detail" id="awards">
-                            <div class="icon"><i class="fs-lg icon-trophy"></i><span class="mobile-title">Awards</span></div>
-                            <div class="info">
-                                <h4 class="title text-uppercase">Awards</h4>
-                                <div class="content">
-                                    <ul class="list-unstyled clear-margin">
-                                        <li class="card card-nested">
-                                            <div class="content">
-                                                <p class="clear-margin" itemprop="award"><strong>Certificate of Apreciation
-                          </strong>,&nbsp;FPT-Aptech Academy</p>
-                                                <p class="text-muted"><small>Awarded on: May 25, 2022</small></p>
-                                                <div class="mop-wrapper">
-                                                    <p>Top Excellent Students in the Spring Semester of FPT Academy in HCM</p>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
                         <div class="detail" id="work-experience">
                             <div class="icon"><i class="fs-lg icon-office"></i><span class="mobile-title">Work Experience</span></div>
                             <div class="info">
@@ -1480,7 +1480,7 @@
                                         <div class="content">
                                             <p class="clear-margin relative"><strong>Customer Service Agent</strong>,&nbsp;</p>
                                             <p class="text-muted"><small><span class="space-right">Jul, 2014 - Jul, 2021</span><span><i
-                            class="icon-clock mr-5"></i>7 years</span></small></p>
+                              class="icon-clock mr-5"></i>7 years</span></small></p>
                                             <div class="mop-wrapper space-bottom">
                                                 <p>As check-in agent that served several international and domestic airlines such as Air-Asia, United Airlines, T-Way Air and Vietjet Air</p>
                                             </div>
